--- a/content/publication/implicit-and-explicit-categorization-processes-in-clinical-psychology/cite.bib
+++ b/content/publication/implicit-and-explicit-categorization-processes-in-clinical-psychology/cite.bib
@@ -1,5 +1,1 @@
-@article{implicit-and-explicit-categorization-processes-in-clinical-psychology_2025,
-  title={ Implicit and explicit categorization processes in clinical psychology },
-  author={ Fakultät für Psychologie },
-  year={ 2025 }
-}
+@phdthesis{414816, title = {Implicit and explicit categorization processes in clinical psychology - evidence-based diagnostics, optimal cut-points, and therapists’ prototypes}, doi = {10.13154/294-12823}, year = {2025}, author = {Bonnin, Gabriel (ORCiD: 0000-0002-7084-8774)} }
