removed overview and corrected author information

--- a/content/publication/diagnostische-interviews-bei-psychischen-storungen/cite.bib
+++ b/content/publication/diagnostische-interviews-bei-psychischen-storungen/cite.bib
@@ -1,5 +1,5 @@
 @article{diagnostische-interviews-bei-psychischen-storungen_2025,
   title={ Diagnostische Interviews bei psychischen Störungen },
-  author={ Bonnin, Gabriel and Buys, Petra and Brachel, Ruth von },
+  author={ Bonnin, Gabriel and Buys, Petra and von Brachel, Ruth },
   year={ 2025 }
 }
