--- a/content/publication/die-klassifikation-psychischer-storungen-mit-diagnostischen-interviews/cite.bib
+++ b/content/publication/die-klassifikation-psychischer-storungen-mit-diagnostischen-interviews/cite.bib
@@ -1,5 +1,5 @@
 @article{die-klassifikation-psychischer-storungen-mit-diagnostischen-interviews_2024,
   title={ Die Klassifikation psychischer Störungen mit diagnostischen Interviews },
-  author={ Bonnin, Gabriel and Kröber, Svea and Brachel, Ruth von },
+  author={ Bonnin, Gabriel and Kröber, Svea and von Brachel, Ruth },
   year={ 2024 }
 }
